feat: create pagination component

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @theme {
     --color-*: initial;
     --color-white: white;
+    --color-red: #E72447;
     --color-coral: #F87A53;
     --color-light-coral: #FA9B7E;
     --color-dark-coral: #F65B2B;
