--- a/src/index.css
+++ b/src/index.css
@@ -1,122 +1,132 @@
 @import 'tailwindcss';
 
 @theme {
-    --color-*: initial;
-    --color-white: white;
-    --color-red: #E72447;
-    --color-coral: #F87A53;
-    --color-light-coral: #FA9B7E;
-    --color-dark-coral: #F65B2B;
-    --color-charcoal: #31393D;
-    --color-seafoam-green: #ABC0B6;
-    --color-jungle-green: #33443C;
-    --color-gray: #D8DDE0;
-    --color-blue-gray: #748790;
-    --color-light-gray: #E0DBD8;
-    --color-light-gray2: #F0F2F3;
+  --color-*: initial;
+  --color-white: white;
+  --color-red: #e72447;
+  --color-coral: #f87a53;
+  --color-light-coral: #fa9b7e;
+  --color-dark-coral: #f65b2b;
+  --color-charcoal: #31393d;
+  --color-seafoam-green: #abc0b6;
+  --color-jungle-green: #33443c;
+  --color-gray: #d8dde0;
+  --color-blue-gray: #748790;
+  --color-light-gray: #e0dbd8;
+  --color-light-gray2: #f0f2f3;
 
-    --font-primary: 'Outfit', sans-serif;
+  --font-primary: 'Outfit', sans-serif;
 
-    --font-weight-100: 100;
-    --font-weight-200: 200;
-    --font-weight-250: 250;
-    --font-weight-300: 300;
-    --font-weight-400: 400;
-    --font-weight-500: 500;
-    --font-weight-600: 600;
-    --font-weight-700: 700;
-    --font-weight-800: 800;
-    --font-weight-900: 900;
+  --font-weight-100: 100;
+  --font-weight-200: 200;
+  --font-weight-250: 250;
+  --font-weight-300: 300;
+  --font-weight-400: 400;
+  --font-weight-500: 500;
+  --font-weight-600: 600;
+  --font-weight-700: 700;
+  --font-weight-800: 800;
+  --font-weight-900: 900;
 }
 
 @layer base {
-    body {
-        font-family: var(--font-primary), serif;
-        max-width: 90rem;
-        margin: 0 auto;
+  body {
+    font-family: var(--font-primary), serif;
+    max-width: 90rem;
+    margin: 0 auto;
+  }
+}
 
-    }
+html:has(.drawer) {
+  overflow: hidden;
+}
+
+html:has(.modal) {
+  overflow: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 .r-estate-descriptions {
-    display: flex;
+  display: flex;
 }
 
 .r-estate-descriptions span {
-    position: relative;
-    color: var(--color-charcoal);
-    font-size: .75rem;
-    line-height: 1.125rem;
-    padding: 0 .25rem;
+  position: relative;
+  color: var(--color-charcoal);
+  font-size: 0.75rem;
+  line-height: 1.125rem;
+  padding: 0 0.25rem;
 }
 
 .r-estate-descriptions span::after {
-    position: absolute;
-    content: '';
-    background: var(--color-charcoal);
-    right: 0;
-    top: .1875rem;
-    width: .0625rem;
-    height: .75rem;
+  position: absolute;
+  content: '';
+  background: var(--color-charcoal);
+  right: 0;
+  top: 0.1875rem;
+  width: 0.0625rem;
+  height: 0.75rem;
 }
 
 .footer-link::after {
-    position: absolute;
-    content: '';
-    background: white;
-    right: 0;
-    top: .375rem;
-    width: .0625rem;
-    height: .75rem;
+  position: absolute;
+  content: '';
+  background: white;
+  right: 0;
+  top: 0.375rem;
+  width: 0.0625rem;
+  height: 0.75rem;
 }
 
 .rooms-filter__button:last-child {
-    margin-right: 12px;
+  margin-right: 12px;
 }
 
 .rooms-filter__button:first-child {
-    margin-left: 12px;
+  margin-left: 12px;
 }
 
 .r-estate-descriptions span:last-child::after {
-    display: none;
+  display: none;
 }
 
 .footer-link:last-child::after {
-    display: none;
+  display: none;
 }
 
 .header-buttons_container button {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .breadcrumb {
-    padding: 0
+  padding: 0;
 }
 
 .house-card__label {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 @media (min-width: 340px) and (max-width: 768px) {
-    html {
-        font-size: 12px;
-    }
-
+  html {
+    font-size: 12px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-    html {
-        font-size: 14px;
-    }
+  html {
+    font-size: 14px;
+  }
 }
 
 @media (min-width: 1024px) {
-    html {
-        font-size: 16px;
-    }
+  html {
+    font-size: 16px;
+  }
 }
