--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --color-blue-gray: #748790;
   --color-light-gray: #e0dbd8;
   --color-light-gray2: #f0f2f3;
+  --color-blue: #007AFF;
 
   --font-primary: 'Outfit', sans-serif;
 
