--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
 @layer base {
   body {
     font-family: var(--font-primary), serif;
-    max-width: 90rem;
+    max-width: 1200px;
     margin: 0 auto;
   }
 }
