refactor: change color in filters

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@
   --color-blue-gray: #748790;
   --color-light-gray: #e0dbd8;
   --color-light-gray2: #f0f2f3;
-  --color-blue: #007AFF;
+  --color-light-gray3: #fafafa;
+  --color-blue: #007aff;
 
   --font-primary: 'Outfit', sans-serif;
 
