refactor: delete mock backend

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   --color-light-gray2: #f0f2f3;
   --color-light-gray3: #fafafa;
   --color-blue: #007aff;
+  --color-green: #42f572;
 
   --font-primary: 'Outfit', sans-serif;
 
