--- a/src/index.css
+++ b/src/index.css
@@ -127,3 +127,13 @@ html {
     transform: rotate(360deg);
   }
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
